style.css
* {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
}

:root {
  --color-dark-blue: #005f6b;
  --color-light-blue: #008c9e;
  --color-cyan: #00b4cc;
  --color-aqua: #00dffc;
  --color-dark-gray: #343838;
  --color-black: #202020;
  --color-gray: #5f5f5f;
  --color-white: #f9f9f9;

  --font-size--xsm: 12px;
  --font-size--sm: 16px;
  --font-size-md: 20px;
  --font-size-lg: 24;
  --font-size-xlg: 28;
}

body {
  background-color: var(--color-dark-gray);
  transition: 0.5s;
}
body.active {
  background: var(--color-white);
}

#toggle {
  position: absolute;
  right: 2rem;
  top: 2rem;
  width: 100px;
  height: 50px;
  border-radius: 160px;
  transition: 0.5s;
  cursor: pointer;
  box-shadow: insent 0 8px 60px rgba(0, 0, 0, 0.1),
    insent 0 8px 8px rgba(0, 0, 0, 0.1), insent 0 -4px 8px rgba(0, 0, 0, 0.1);
}

#toggle.active {
  background: #fff;
  background-color: inset 0 2px 60px rgba(0, 0, 0, 0.01),
    inset 0 2px 8px rgba(0, 0, 0, 0.01), inset 0 -4px 4px rgba(0, 0, 0, 0.05);
}

#toggle .indicator {
  position: absolute;
  top: 0;
  left: 0;
  width: 55px;
  height: 55px;
  background: linear-gradient(to bottom, #444, #222);
  background-image: url(src/img/moon.svg);
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 50%;
  transform: scale(0.9);
  box-shadow: 0 8px 40px rgba(0, 0, 0, 0.05),
    insent 0 4px 4px rgba(255, 255, 255, 0.2),
    insent 0 -4px 4px rgba(255, 255, 255, 0.2);
  transition: 0.5s;
}
#toggle.active .indicator {
  left: 3rem;
  top: 0rem;
  background: linear-gradient(to bottom, #eaeaea, #f9f9f9);
  background-image: url(src/img/sun.svg);
  background-repeat: no-repeat;
  background-position: center;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1),
    insent 0 4px 4px rgba(255, 255, 255, 1),
    insent 0 -4px 4px rgba(255, 255, 255, 1);
}
h1,
h2,
h3,
h4,
p {
  text-wrap: pretty;
}

.modal {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100dvb;
  background-color: transparent;
  z-index: 1000;
}

.modal-content {
  width: 80%;
  height: 70dvb;
  flex-direction: column;
  justify-content: space-between;
  background-color: white;
  opacity: 1;
  font-size: var(--font-size-md);
  color: var(--color-dark-gray);
  font-weight: 500;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  text-align: center;
  align-content: center;
}

.headphonesIcon_container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.cancel-container {
  width: 100%;
  text-align: end;
}

.cancel-container--btn {
  width: 3rem;
  cursor: pointer;
  border-radius: 50%;
  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
}

.cancel-container--btn:hover {
  scale: 1.1;
}

main {
  width: 100%;
  height: 80dvb;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-top: 5rem;
}

.btn_container {
  width: 50%;
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  gap: 0.5rem;
}

.btn_container button {
  width: 8rem;
  height: 8rem;

  font-weight: 600;
  font-size: var(--font-size--sm);
  font-family: Arial, Helvetica, sans-serif;
  color: var(--color-white);

  background-color: var(--color-aqua);
  border-radius: 20px;
  border: none;
  outline: none;
  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
  transition: all 0.3s ease;

  cursor: pointer;
}

.btn_container .play-button:hover {
  scale: 1.1;
  box-shadow: 3px 13px 54px -8px var(--color-cyan);
}

.circle {
  display: none;
  width: 5rem;
  height: 5rem;
  margin-bottom: 4rem;
  color: var(--color-white);

  border-radius: 50%;
  background-color: var(--color-dark-blue);
  box-shadow: 0 0 1rem 1rem var(--color-dark-blue);
  animation: expand 12s ease-in-out infinite;
}

#inhaleText,
#exhaleText,
#holdText {
  opacity: 0;
  transition: opacity 0.4s ease;
}

@keyframes expand {
  0%,
  100% {
    transform: scale(1);
    opacity: 1;
  }
  33% {
    transform: scale(2);
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  66% {
    transform: scale(2);
  }
}

@keyframes showInhale {
  0%,
  33% {
    opacity: 1;
  }
  34%,
  100% {
    opacity: 0;
  }
}

@keyframes showHold {
  33%,
  66% {
    opacity: 1;
  }
  0%,
  32%,
  67%,
  100% {
    opacity: 0;
  }
}

@keyframes showExhale {
  66%,
  100% {
    opacity: 1; /* Mostrar exhale en la fase final */
  }
  0%,
  65% {
    opacity: 0; /* Ocultar exhale fuera de la fase final */
  }
}

#inhaleText {
  position: relative;
  top: 0rem;
  margin-top: 0.5rem;
  left: 0.5rem;
  animation: showInhale 12s ease-in-out infinite;
}

#holdText {
  position: relative;
  top: 0rem;
  margin-top: 0.5rem;
  right: 0.5rem;
  animation: showHold 12s ease-in-out infinite;
}

#exhaleText {
  position: relative;
  margin-top: 0.5rem;
  top: 0rem;
  right: 2.3rem;
  animation: showExhale 12s ease-in-out infinite;
}

/*Footer*/

footer {
  width: 100%;
  height: 20vh;
  text-align: center;
}

.footer-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

footer p {
  width: 100%;
  height: 7vh;

  align-content: end;
  color: var(--color-white);

  margin: 16px 0px 0px 0px;
}

.social-links {
  margin: 12px 0px 0px 0px;
  list-style-type: none;
  padding: 0;
  display: flex;
  gap: 20px;
}

.social-links a {
  text-decoration: none;
  color: var(--color-white);
  font-size: var(--font-size-xsm);
  display: flex;
  align-items: center;
  gap: 10px;
}

.social-links a:hover {
  color: var(--color-cyan);
}

/*Mobile view*/
@media (max-width: 339px) {
  .btn_container {
    width: 85%;
    height: auto;
    gap: 1rem;
    padding-top: 1rem;
  }

  .btn_container button {
    width: 6rem;
    height: 6rem;
  }

  footer {
    width: 100%;
    height: 20dvb;
    padding-top: 0rem;
  }

  footer p {
    width: 95%;
    height: 7vh;

    align-content: end;
    color: var(--color-white);

    margin: 16px 0px 0px 0px;
  }
  .headphonesIcon {
    width: 85%;
    height: 90%;
  }

  #inhaleText,
  #exhaleText,
  #holdText {
    top: 0rem;
  }

  #inhaleText {
    left: 0.3rem;
  }

  #exhaleText {
    right: 1.5rem;
  }

  .circle {
    display: none;
    width: 3rem;
    height: 3rem;
    margin-bottom: 2rem;
  }
}

@media (min-width: 340px) {
  .btn_container button {
    width: 6rem;
    height: 6rem;
  }

  .headphonesIcon {
    width: 80%;
    height: 15rem;
  }

  .btn_container {
    width: 60%;
    height: 20rem;
  }

  .circle {
    display: none;
    width: 3rem;
    height: 3rem;
  }

  footer {
    height: 20dvb;
    padding-top: 1rem;
  }
  footer p {
    height: 4vh;
  }

  #inhaleText,
  #exhaleText,
  #holdText {
    top: 0rem;
  }

  #inhaleText {
    left: 0.3rem;
  }

  #exhaleText {
    right: 1.5rem;
  }
}
@media (min-width: 675px) {
  .btn_container {
    width: 50%;
    height: 20rem;
  }

  .btn_container button {
    width: 6rem;
    height: 6rem;
  }

  .headphonesIcon {
    width: 40%;
    height: 80%;
  }

  footer {
    height: 20dvb;
    padding-top: 3rem;
  }

  #inhaleText,
  #exhaleText,
  #holdText {
    top: 0.5rem;
  }
  .circle {
    display: none;
    width: 3rem;
    height: 3rem;
    margin-bottom: 2rem;
  }
}

